objects/Sales_Order_Job_Task__c/Sales_Order_Job_Task__c.object-meta.xml
<CustomObject>
    <label>Sales Order Job Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>