objects/Sales_Order_Job_Task__c/fields/Amount_To_Bill__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Bill__c</fullName>
    <label>Amount To Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>