objects/Sales_Order_Job_Task__c/fields/Custom_Assumption10__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assumption10__c</fullName>
    <label>Custom Assumption 10</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>