objects/Sales_Order_Job_Task__c/fields/Custom_Assumption1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assumption1__c</fullName>
    <label>Custom Assumption 1</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>