objects/Sales_Order_Job_Task__c/fields/Custom_Assumption2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assumption2__c</fullName>
    <label>Custom Assumption 2</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>