objects/Sales_Order_Job_Task__c/fields/Job_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Task Template</label>
    <referenceTo>Job_Task_Template__c</referenceTo>
    <relationshipLabel>Sales Order Job Tasks</relationshipLabel>
    <relationshipName>Sales_Order_Job_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>