objects/Sales_Order_Job_Task__c/fields/Pct_Billed__c.field-meta.xml
<CustomField>
    <fullName>Pct_Billed__c</fullName>
    <label>% Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>