objects/Sales_Order_Job_Task__c/fields/Pct_To_Bill__c.field-meta.xml
<CustomField>
    <fullName>Pct_To_Bill__c</fullName>
    <label>Percentage To Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>