objects/Sales_Order_Job_Task__c/fields/Rolled_Up_Sales_Lines_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rolled_Up_Sales_Lines_Amount__c</fullName>
    <label>Rolled-Up Sales Lines Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>