objects/Sales_Order_Job_Task__c/fields/Task_No__c.field-meta.xml
<CustomField>
    <fullName>Task_No__c</fullName>
    <label>Task No.</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>