objects/Sales_Order_Job_Task__c/fields/Total_Amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_Tax__c</fullName>
    <label>Total Amount Incl. Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>