objects/Sales_Order_Job_Task__c/validationRules/Prevent_Edit_Billing_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Billing_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Billing_Type__c, "T&amp;M"),
        ISPICKVAL(Billing_Type__c, "Fixed Price")
    ),
    $Profile.Name = "ACV Standard User",
    ISCHANGED(Billing_Type__c)
)</errorConditionFormula>
    <errorDisplayField>Billing_Type__c</errorDisplayField>
    <errorMessage>Changing the Billing Type is not allowed.</errorMessage>
</ValidationRule>